# AON

./: .gitignore  README.md
ai-agent/complex/: pyproject.toml
ai-agent/complex/src/: firecrawl.py  workflow.py
ai-agent/simple/: main.py  pyproject.toml
e-commerce-ai-agent/: app.py  pyproject.toml
e-commerce-ai-agent/static/: style.css
e-commerce-ai-agent/templates/: base.html  index.html
langchain-rag-chat/: README.md  compare_embeddings.py  create_database.py  query_data.py
logistic-regression/: README.md  main.py  pyproject.toml
pytorch-stock-predictor/: README.md  main.ipynb
theory/richTextual/: main.py  pyproject.toml
theory/streamlit/: main.py  pyproject.toml
theory/uv/: main.py  pyproject.toml
